# cybersmart-aidanmcdonagh

./: .dockerignore  docker-compose.yml  dockerfile  manage.py  pipeline.sh  requirements.txt  setup.cfg
aidanmcdonagh/: asgi.py  settings.py  urls.py
todos/: TODO.md  models.py  serializers.py  settings.py  urls.py  views.py  weather.py  wsgi.py
todos/migrations/: 0001_initial.py
todos/templates/: base.html  change_todo.html  todo_list.html
